[package]
name = "websocket"
version = "0.1.0"
authors = ["VampireTeeth <vampireteeth001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "ws-server"
path = "src/main.rs"


[[bin]]
name = "ws-client"
path = "src/client.rs"

[[bin]]
name = "ws-chat-server"
path = "src/chat_server/main.rs"


[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"

awc = "1.0.1"
env_logger = "0.7"
futures = "0.3.1"
bytes = "0.5.3"
byteorder = "1.1"
serde = "1.0"
serde_json = "1.0"

rand = "0.7"
